# roboy_plexus

./: .gitmodules  CMakeLists.txt  README.md  package.xml  test.txt
arm/lib/arm-linux-gnueabihf/: libBullet3Collision.so.2.88  libBullet3Common-float64.so.2.88  libBullet3Geometry.so.2.88  libBulletCollision.so.2.88  libBulletDynamics-float64.so.2.88  libBulletSoftBody-float64.so.2.88  libBulletSoftBody.so.2.88  libEGL.so.1.1.0  libEGL_mesa.so.0.0.0  libFLAC.so.8.3.0  libGLESv2.so.2.1.0  libGLX_mesa.so.0.0.0  libHalf.so.24.0.0  libIexMath-2_3.so.24.0.0  libIlmThread-2_3.so.24.0.0  libImath-2_3.so.24.0.0  libLinearMath-float64.so.2.88  libOgreOverlay.so.1.9.0  libOgreProperty.so.1.9.0  libOgreRTShaderSystem.so.1.9.0  libOpenCL.so.1.0.0  libPocoCrypto.so.62  libPocoDataSQLite.so.62  libPocoFoundation.so.62  libPocoJSON.so.62  libPocoNetSSL.so.62  libPocoUtil.so.62  libPocoXML.so.62  libPocoZip.so.62  libQt5Concurrent.prl  libQt5Core.prl  libQt5Core.so.5.12.8  libQt5DBus.prl  libQt5DBus.so.5.12.8  libQt5EglFSDeviceIntegration.prl  libQt5EglFsKmsSupport.prl  libQt5Gui.prl  libQt5Gui.so.5.12.8  libQt5Network.prl  libQt5OpenGL.prl  (+256 more)
arm/usr/include/: Eigen  FreeImage.h  assuan.h  expat.h  gpgme.h  ldap_features.h
arm/usr/lib/: libyaml-cpp.so.0.6.2
arm/usr/lib/apg/: apg
cmake/: findros.cmake
config/: pinky.yaml  roboy3.yaml
docs/connection_diagram/: connection_diagram-cache.lib  connection_diagram.bak  connection_diagram.sch  roboy3.lib  sym-lib-table
docs/documentation/: Doxyfile  conf.py  index.rst
docs/documentation/ScopeContext/: 1_conventions.rst  2_architecture_constraints.rst  3_technical_interfaces.rst  4_user_interface.rst
docs/documentation/Usage/: 0_installation.rst  1_getting_started.rst
docs/documentation/development/: 06_building_block_view.rst  07_runtime_view.rst  08_deployment_view.rst  9_Libraries.rst
docs/documentation/html/: _a1335_8hpp_source.html  _a_d_x_l345_8h_source.html  _adafruit___b_n_o055_8hpp_source.html  _adafruit___l_s_m9_d_s1_8hpp_source.html  _adafruit___sensor_8h_source.html  _c_r_c32_8h_source.html  am4096_8hpp_source.html  annotated.html  arm_control_8hpp_source.html  class_a1335-members.html  class_a1335.html  class_a_m4096-members.html  class_a_m4096.html  class_adafruit___b_n_o055-members.html  class_adafruit___b_n_o055.html  class_adafruit___b_n_o055__coll__graph.md5  class_adafruit___b_n_o055__inherit__graph.md5  class_adafruit___l_s_m9_d_s1-members.html  class_adafruit___l_s_m9_d_s1.html  class_adafruit___l_s_m9_d_s1_1_1_sensor-members.html  class_adafruit___l_s_m9_d_s1_1_1_sensor.html  class_adafruit___l_s_m9_d_s1_1_1_sensor__coll__graph.map  class_adafruit___l_s_m9_d_s1_1_1_sensor__coll__graph.md5  class_adafruit___l_s_m9_d_s1_1_1_sensor__inherit__graph.md5  class_adafruit___sensor-members.html  class_adafruit___sensor.html  class_adafruit___sensor__inherit__graph.md5  class_arm_control-members.html  class_arm_control.html  class_arm_control__coll__graph.map  class_arm_control__coll__graph.md5  class_c_r_c32-members.html  class_c_r_c32.html  class_i2_c-members.html  class_i2_c.html  class_myo_control-members.html  class_myo_control.html  class_perform_movement_action-members.html  (+75 more)
dump/: RikshawControl.sv
include/roboy_plexus/: A1335.hpp  Adafruit_BNO055.hpp  Adafruit_LSM9DS1.hpp  CRC32.h  NeoPixel.hpp  am4096.hpp  armControl.hpp  controlActions.hpp  handControl.hpp  hps_0.h  hps_0.h.gch  i2c.hpp  joy_CTL.hpp  msj_platform.hpp  msj_platform_hps.h  myoControl.hpp  myoControlRegister.hpp  pwm.hpp  roboyPlexus.hpp  timer.hpp  tle493d_w2b6.hpp  tlv493d.hpp  tlv493d_fpga.hpp  udpServer.hpp  xl320.hpp
scripts/: automaticRoboyPlexusLauncherDaemon  close_hand  control_hand.bash  handCommand  open_hand
src/: A1335.cpp  Adafruit_BNO055.cpp  Adafruit_LSM9DS1.cpp  CRC32.cpp  ROS_MASTER_URI_receiver.cpp  UDPSocket.cpp  am4096.cpp  armControl.cpp  bldc_testbed.cpp  controlActions.cpp  elbow_control.cpp  handControl.cpp  i2c.cpp  joy_CTL.cpp  magnetic_field_calibration.cpp  main.cpp  msj_platform.cpp  myoControl.cpp  roboyPlexus.cpp  test.cpp  tle493d_w2b6.cpp  tlv493d.cpp  tlv493d_fpga.cpp  udpServer.cpp  xl320.cpp
src/control/: controlActions.cpp  fanControl.cpp
src/interfaces/: canBusControl.cpp  canSocket.cpp  fanControl.cpp  hand.cpp  i2c.cpp  iCEbusControl.cpp  icebusControl.cpp  motorControl.cpp  myoControl.cpp
src/sensors/: A1335.cpp  Adafruit_BNO055.cpp  Adafruit_LSM9DS1.cpp  BallJoint.cpp  am4096.cpp  tle493d_w2b6.cpp  tli4970.cpp  tlv493d.cpp
src/utility/: ROS_MASTER_URI_receiver.cpp  UDPSocket.cpp
testbench/: speed_modul.sv  speed_modul.sv.bak  testbench_speed.qpf  testbench_speed.qsf  testbench_speed.sv  testbench_speed.sv.bak  testbench_speed_nativelink_simulation.rpt
testbench/db/: .cmp.kpt  prev_cmp_testbench_speed.qmsg  testbench_speed.(0).cnf.cdb  testbench_speed.(0).cnf.hdb  testbench_speed.(1).cnf.cdb  testbench_speed.(1).cnf.hdb  testbench_speed.(2).cnf.cdb  testbench_speed.(2).cnf.hdb  testbench_speed.asm.qmsg  testbench_speed.asm.rdb  testbench_speed.cbx.xml  testbench_speed.cmp.bpm  testbench_speed.cmp.cdb  testbench_speed.cmp.hdb  testbench_speed.cmp.idb  testbench_speed.cmp.logdb  testbench_speed.cmp.rdb  testbench_speed.cmp_merge.kpt  testbench_speed.cyclonev_io_sim_cache.ss_85c_slow.hsd  testbench_speed.db_info  testbench_speed.fit.qmsg  testbench_speed.hier_info  testbench_speed.hif  testbench_speed.lpc.html  testbench_speed.lpc.rdb  testbench_speed.lpc.txt  testbench_speed.map.bpm  testbench_speed.map.cdb  testbench_speed.map.hdb  testbench_speed.map.kpt  testbench_speed.map.qmsg  testbench_speed.map.rdb  testbench_speed.map_bb.cdb  testbench_speed.map_bb.hdb  testbench_speed.pre_map.hdb  testbench_speed.root_partition.map.reg_db.cdb  testbench_speed.routing.rdb  testbench_speed.rtlv.hdb  testbench_speed.rtlv_sg.cdb  testbench_speed.rtlv_sg_swap.cdb  (+7 more)
testbench/output_files/: testbench_speed.asm.rpt  testbench_speed.done  testbench_speed.fit.rpt  testbench_speed.fit.summary  testbench_speed.flow.rpt  testbench_speed.jdi  testbench_speed.map.rpt  testbench_speed.map.summary  testbench_speed.pin
(+1323 files in other folders)
