<?xml version="1.0"?>
<package format="2">
  <name>roboy_plexus</name>
  <version>0.0.0</version>
  <description>roboy nervous system</description>
  <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>communication</depend>
  <depend>roboy_communication_middleware</depend>
  <depend>roboy_communication_control</depend>
  <depend>common_utilities</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msg</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
