<?xml version="1.0"?>
<package format="2">
  <name>roboy_plexus</name>
  <version>0.0.0</version>
  <description>roboy nervous system</description>
  <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <depend>tinyxml</depend>
  <!-- <depend>rospy</depend> -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>message_generation</depend> -->
  <!-- <depend>message_runtime</depend> -->
  <!-- <depend>communication</depend> -->
  <depend>roboy_middleware_msgs</depend>
  <depend>roboy_control_msgs</depend>
  <!-- <depend>common_utilities</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
